<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="org.pondar.pacmankotlin.MainActivity" >


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:columnCount="2"
        >

    <TextView
        android:id="@+id/pointsView"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:text="@string/points"
        android:textSize="24sp"
        android:layout_column="0"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textSize="24sp"
        android:layout_column="1"
        />

    </GridLayout>


    <!-- Notice how the custom view is referenced here with
    a full package path-->
    <org.pondar.pacmankotlin.GameView
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_weight="1">

    </org.pondar.pacmankotlin.GameView>


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:orientation="horizontal"
        android:layout_gravity="center">


        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/continueLabel"

            />

        <Button
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/pause" />


        <Button
            android:id="@+id/moveUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/move_up" />

        <Button
            android:id="@+id/moveLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/move_left" />

        <Button
            android:id="@+id/moveDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/move_down" />

        <Button
            android:id="@+id/moveRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/move_right" />


    </GridLayout>


</LinearLayout>
